# ong-crowdfunding

./: .gitignore  Cargo.toml  README.md  sc-config.toml
interactor/: Cargo.toml
interactor/src/: interact.rs  interactor_main.rs  lib.rs  ongcrowdfunding_cli.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
meta/: Cargo.toml
meta/src/: main.rs
output/: ongcrowdfunding.abi.json  ongcrowdfunding.imports.json  ongcrowdfunding.mxsc.json  ongcrowdfunding.wasm  proxy.rs
scenarios/: ongcrowdfunding.scen.json
src/: ongcrowdfunding.rs
tests/: crowdfunding_blackbox_test.rs  ongcrowdfunding_scenario_go_test.rs  ongcrowdfunding_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
